--- a/source/index.html
+++ b/source/index.html
@@ -181,13 +181,13 @@
           <div class="gallery__decor"></div>
           <picture>
             <source type="image/webp" media="(max-width: 767px)" srcset="./img/pictures/room-monitor-left-mobile@1x.webp, ./img/pictures/room-monitor-left-mobile@2x.webp 2x">
-            <source type="image/webp" srcset="./img/pictures/room-monitor-left-desktop@2x.webp, ./img/pictures/room-monitor-left-desktop@2x.wepb 2x">
+            <source type="image/webp" srcset="./img/pictures/room-monitor-left-desktop@1x.webp, ./img/pictures/room-monitor-left-desktop@2x.webp 2x">
             <source media="(max-width: 767px)" srcset="./img/pictures/room-monitor-left-mobile@1x.png, ./img/pictures/room-monitor-left-mobile@2x.png 2x">
             <img class="gallery__room-moninor-left" src="./img/pictures/room-monitor-left-desktop@1x.png" srcset="./img/pictures/room-monitor-left-desktop@2x.png" alt="монитор №1" >
           </picture>
           <picture>
             <source type="image/webp" media="(max-width: 767px)" srcset="./img/pictures/room-monitor-right-mobile@1x.webp, ./img/pictures/room-monitor-right-mobile@2x.webp 2x">
-            <source type="image/webp" srcset="./img/pictures/room-monitor-right-desktop@1x.webp, ./img/pictures/room-monitor-right-desktop@2x.wepb 2x">
+            <source type="image/webp" srcset="./img/pictures/room-monitor-right-desktop@1x.webp, ./img/pictures/room-monitor-right-desktop@2x.webp 2x">
             <source media="(max-width: 767px)" srcset="./img/pictures/room-monitor-right-mobile@1x.png, ./img/pictures/room-monitor-right-mobile@2x.png 2x">
             <img class="gallery__room-moninor-right" src="./img/pictures/room-monitor-right-desktop@1x.png" srcset="./img/pictures/room-monitor-right-desktop@2x.png" alt="монитор №2">
           </picture>
